--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Runtime configuration for Cloud Run -->
+    <script src="/config.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
